fix spacing between sidemenu items, and overflowing of titles not aligning correctly

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -709,6 +709,10 @@
 		border: 1px solid #d0d0d0;
 		box-shadow: 0px 0px 5px #d0d0d0;
 		background-color: #f0f0f0;
+		.menu > li.menu-item {
+			padding-left: 35px;
+			padding-bottom: 15px;
+		}
 		& > ul {
 			padding: 0;
 			margin: 0;
@@ -733,6 +737,7 @@
 							counter-increment: item;
 							background-color: #d0d0d0;
 							width: 25px;
+							margin-left: -35px;
 							display: inline-block;
 							color: #fff;
 							margin-right: 10px;
@@ -749,7 +754,7 @@
 						ul {
 							list-style-type: none;
 							padding: 0;
-							margin: 0 0 0 35px;
+							margin: 0;
 							li {
 								&:before {
 									content: none;
@@ -771,10 +776,6 @@
 			font-weight: bold !important;
 			color: #246998;
 		}
-	}
-
-	.menu-item-has-children {
-		padding-bottom: 15px;
 	}
 
 	.reference-landing .box ul {
